--- a/Projekat/static/styles/style.css
+++ b/Projekat/static/styles/style.css
@@ -22,3 +22,37 @@
     font-size: 20px;
     padding: 5px;
 }
+
+.facility_heading {
+    font-size: 40px;
+    text-align: center;
+}
+
+.sport_facility_display_header {
+    margin-bottom: 10px;
+    text-align: right;
+}
+
+.sport_facility_search_display {
+    text-align: right;
+}
+
+.facility_table_wrap{
+    margin-left:auto;
+    margin-right:auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.image_display {
+    height: 200px;
+    width: 330px;
+}
+
+.facility_table_wrap th{
+    font-size : 30px;
+    width : 300px;
+}
+.facility_table_wrap td{
+    font-size : 20px;
+}
