--- a/Projekat/static/styles/style.css
+++ b/Projekat/static/styles/style.css
@@ -89,3 +89,7 @@ table{
 .facility_button {
     font-size : 20px;
 }
+.facility_button_row{
+    vertical-align: middle;
+    text-align: center;
+}
