--- a/Projekat/static/styles/style.css
+++ b/Projekat/static/styles/style.css
@@ -150,3 +150,11 @@ table{
 .button_icon_style:click{
     background-color: orange;
 }
+
+.workout_history_wrap{
+    text-align: center;
+}
+
+.workout_history_wrap table {
+    margin: 0 auto;
+}
