--- a/Projekat/static/styles/style.css
+++ b/Projekat/static/styles/style.css
@@ -150,3 +150,16 @@ table{
 .button_icon_style:click{
     background-color: orange;
 }
+
+.comment_form{
+    margin-bottom: 100px;
+    text-align: center;
+}
+.comment_table{
+    margin-left:210px;
+    margin-bottom:10px;
+    margin-top:10px;
+    margin-right:400px;
+    padding: 20px 5px 5px 20px;
+    background-color: #f4a261;
+}
