add styles to most pages

--- a/Projekat/static/styles/managers_facility_display_style.css
+++ b/Projekat/static/styles/managers_facility_display_style.css
@@ -1,7 +1,7 @@
 .managers_facility_header {
     font-size: 30px;
-    text-align : left;
-    margin-left : 210px;
+    text-align : center;
+    margin-top: 70px;
 }
 
 .managers_facility_image_display{
